--- a/css/style.css
+++ b/css/style.css
@@ -624,6 +624,11 @@ video {
   height: 1.5rem;
 }
 
+.h-fit {
+  height: -moz-fit-content;
+  height: fit-content;
+}
+
 .max-h-96 {
   max-height: 24rem;
 }
